fix non-wrapping link in doh methodology

--- a/src/styles/_links.scss
+++ b/src/styles/_links.scss
@@ -42,3 +42,11 @@ a {
     width: 100%;
   }
 }
+
+.link {
+  &--wrap {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+  }
+}
